--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nivo/sankey": "^0.68.0",
     "@nivo/scatterplot": "^0.69.1",
     "@nivo/treemap": "^0.68.0",
+    "@rawgraphs/rawgraphs-charts": "^1.0.1",
     "@rawgraphs/rawgraphs-core": "^1.0.0-beta.17",
     "@turf/bbox": "^6.3.0",
     "@turf/bezier-spline": "^6.3.0",
@@ -47,7 +48,7 @@
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
     "easy-peasy": "^5.0.4",
-    "echarts": "^5.4.2",
+    "echarts": "^5.4.3",
     "fs": "^0.0.1-security",
     "html-react-parser": "^1.4.12",
     "i18next": "^20.2.1",
